--- a/resume.tex
+++ b/resume.tex
@@ -112,10 +112,10 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Jake Ryan} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \textbf{\Huge \scshape Harsh Singh} \\ \vspace{1pt}
+    \small +(91) 6359120976 $|$ \href{mailto:x@x.com}{\underline{hsingh050803@gmail.com}} $|$ 
+    \href{www.linkedin.com/in/harshsingh58}{\underline{linkedin.com/in/harsh}} $|$
+    \href{https://github.com/dm4p385}{\underline{github.com/harsh}}
 \end{center}
 
 
@@ -123,11 +123,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-    \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {Birla Institute of Technology and Science Pilani}{Pilani, RJ}
+      {Bachelor of Engineering in Electrical and Electronics Engineering}{Oct 2021 -- June 2025}
   \resumeSubHeadingListEnd
 
 
@@ -136,12 +133,12 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {SDE Intern}{Jan 2025 -- Present}
+      {Vegapay}{Bengaluru, KA}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Engineered a warm-up mechanism post-deployment which \textbf{reduced} first-hit \textbf{API latency by 76\%}, accelerating processing of high-volume financial transactions and improving overall system responsiveness for users}
+        \resumeItem{Developed \textbf{Multi-Currency Reconciliation} solution to automate USD-equivalent tracking using Mastercard’s T140 file, resolving discrepancies and enabling accurate financial reporting for cross currency transactions}
+        \resumeItem{Migrated financial reporting queries from \textit{Amazon Athena} to \textit{ClickHouse}, \textit{reducing query execution time by 70\%} and \textit{cutting operational costs by 50\%}, enhancing fraud detection and transaction analytics.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -155,24 +152,20 @@
 %-------------------------------------------
 
     \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
+      {SDE Intern}{Jun 2024 -- Aug 2024}
+      {Samsung R\&D Institute Bangalore}{Bengaluru, KA}
       \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
+        \resumeItem{Collaborated with the Language AI Team to refine Speech Keyword Detection and Verification modules, \textbf{boosting recognition accuracy by 35\%} through advanced signal processing and model optimization}
+        \resumeItem{Used Tensorflow lite models in C++ to \textbf{reduce memory footprint and power usage the model footprint by 40\%}}
     \resumeItemListEnd
 
     \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
+      {SDE Intern}{Sep 2023 -- Nov 2023}
+      {Threely}{Remote}
       \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
+        \resumeItem{Refactored code, \textbf{reduced LOC by 12\%} and performed bug fixes \textbf{increasing system stability} and \textbf{reducing error rates by 15\%}}
+        \resumeItem{Developed an end-to-end encrypted communication system using \textit{REST APIs} and \textit{Private-Public cryptographic keys}}
+        \resumeItem{Leveraged \textit{Redis’s pub-sub mechanism} to manage \textit{Websocket connections} and enable message broadcasting}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -182,20 +175,25 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+          {\textbf{AI Terminal Autocomplete Engine} $|$ \emph{Python, Go, FAISS, LLM}}{April 2025}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
+            \resumeItem{Engineered a \textbf{modular backend in Python} for prediction logic and a \textbf{real-time interactive TUI} in \textit{Go} using Bubble Tea, communicating efficiently via \textit{gRPC} for \textbf{low-latency suggestions} inside the terminal}
+            \resumeItem{Developed a \textbf{context-aware prediction engine} that combines \textbf{\textit{Trie}-based prefix matching}, \textbf{\textit{FAISS} vector search}, and \textbf{LLM-based Retrieval-Augmented Generation (RAG)} to deliver intelligent, ranked shell command suggestions}
+            \resumeItem{Designed a custom \textbf{\textit{FAISS}-powered prompt caching system} to store and retrieve semantically similar user prompts, significantly reducing redundant LLM calls and improving system responsiveness}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+          {\textbf{Distributed In-Memory Cache} $|$ \emph{Go, Distributed Systems}}{Aug 2024}
           \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+            \resumeItem{Created a \textit{Golang}-based distributed in-memory cache focused on \textbf{high availability and partitioning}}
+            \resumeItem{Used \textbf{leader-write, follower-read architecture} to dynamically elect leaders for replication}
+            \resumeItem{Utilized \textbf{Consistent Hashing} technique for sharding and seamlessly handling node failures}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{BITS Fest Backend and Infrastructure} $|$ \emph{Python, Django, Go, Docker, Redis}}{Apr 2023}
+          \resumeItemListStart
+            \resumeItem{Created a \textit{Golang} based wallet system for BITS Pilani Fest apps, enabling transactions, ticketing, T-OTP and an ordering system seamlessly handling around \textbf{2.49Cr in app transactions}}
+            \resumeItem{Created internal tools for Registrations, Event, and Inventory management using \textit{Django} and \textit{Django REST Framework} accumulating \textbf{revenue of 48 Lacs total}}
+            \resumeItem{\textbf{Managed 5000+ users} with a \textbf{peak of 1000+ concurrent users}, ensuring minimal downtime by implementing a microservice structure with \textit{Docker}, \textit{Redis} with scalable \textit{SSE} servers for real-time app updates}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -206,10 +204,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Languages}{: JavaScript, Python, Java, Go, C++} \\
+     \textbf{Frameworks}{: Django, Django-REST, Express.js, Springboot, FastAPI, Gin} \\
+     \textbf{Developer Tools}{: Git, Docker, Kubernetes, Redis, PostgreSQL, MongoDB, Redis, Kafka, Linux} \\
     }}
  \end{itemize}
 
