--- a/resume.tex
+++ b/resume.tex
@@ -137,8 +137,8 @@
       {Vegapay}{Bengaluru, KA}
       \resumeItemListStart
         \resumeItem{Engineered a warm-up mechanism post-deployment which \textbf{reduced} first-hit \textbf{API latency by 76\%}, accelerating processing of high-volume financial transactions and improving overall system responsiveness for users}
-        \resumeItem{Developed \textbf{Multi-Currency Reconciliation} solution to automate USD-equivalent tracking using Mastercard’s T140 file, resolving discrepancies and enabling accurate financial reporting for cross currency transactions}
-        \resumeItem{Migrated financial reporting queries from \textit{Amazon Athena} to \textit{ClickHouse}, \textit{reducing query execution time by 70\%} and \textit{cutting operational costs by 50\%}, enhancing fraud detection and transaction analytics.}
+        \resumeItem{Built WaveCtrl, \textbf{a full-stack automation tool} using \textbf{\textit{Streamlit}}, \textbf{\textit{FastAPI}}, and \textbf{\textit{Celery}}, enabling teams to configure and trigger data ingestion pipelines through a self-serve dashboard; \textbf{reduced manual onboarding time by automating backend workflows} and job scheduling via \textbf{\textit{RESTful APIs}} and async task queues.}
+        \resumeItem{Migrated financial reporting queries from \textit\textbf{{Amazon Athena}} to \textbf{ClickHouse}, \textit{\textbf{reducing query execution time by 70\%}} and \textit{\textbf{cutting operational costs by 50\%}}, enhancing fraud detection and transaction analytics.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -164,7 +164,7 @@
       {Threely}{Remote}
       \resumeItemListStart
         \resumeItem{Refactored code, \textbf{reduced LOC by 12\%} and performed bug fixes \textbf{increasing system stability} and \textbf{reducing error rates by 15\%}}
-        \resumeItem{Developed an end-to-end encrypted communication system using \textit{REST APIs} and \textit{Private-Public cryptographic keys}}
+        \resumeItem{Developed an end-to-end encrypted system using \textit{REST APIs} and \textit{Private-Public cryptographic keys}}
         \resumeItem{Leveraged \textit{Redis’s pub-sub mechanism} to manage \textit{Websocket connections} and enable message broadcasting}
       \resumeItemListEnd
 
