add Vegapay fte and remove Threely internship experience

--- a/resume.tex
+++ b/resume.tex
@@ -133,7 +133,15 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {SDE Intern}{Jan 2025 -- Present}
+      {SDE-1}{Jul 2025 -- Present}
+      {Vegapay}{Bengaluru, KA}
+      \resumeItemListStart
+        \resumeItem{Designed and developed \textbf{Athena}, a multimodal \textbf{\textit{AI assistant}} with \textbf{real-time voice/text interaction}, leveraging \textbf{\textit{LangGraph}} agents, \textbf{\textit{RAG}} (\textbf{\textit{vector}} + \textbf{\textit{graph DB}}), \textbf{\textit{Whisper}}, and \textbf{\textit{Kokoro-TTS}} to enable intelligent onboarding and contextual guidance.}
+      \resumeItemListEnd
+    
+
+    \resumeSubheading
+      {SDE Intern}{Jan 2025 -- June 2025}
       {Vegapay}{Bengaluru, KA}
       \resumeItemListStart
         \resumeItem{Engineered a warm-up mechanism post-deployment which \textbf{reduced} first-hit \textbf{API latency by 76\%}, accelerating processing of high-volume financial transactions and improving overall system responsiveness for users}
@@ -158,16 +166,7 @@
         \resumeItem{Collaborated with the Language AI Team to refine Speech Keyword Detection and Verification modules, \textbf{boosting recognition accuracy by 35\%} through advanced signal processing and model optimization}
         \resumeItem{Used Tensorflow lite models in C++ to \textbf{reduce memory footprint and power usage the model footprint by 40\%}}
     \resumeItemListEnd
-
-    \resumeSubheading
-      {SDE Intern}{Sep 2023 -- Nov 2023}
-      {Threely}{Remote}
-      \resumeItemListStart
-        \resumeItem{Refactored code, \textbf{reduced LOC by 12\%} and performed bug fixes \textbf{increasing system stability} and \textbf{reducing error rates by 15\%}}
-        \resumeItem{Developed an end-to-end encrypted system using \textit{REST APIs} and \textit{Private-Public cryptographic keys}}
-        \resumeItem{Leveraged \textit{Redis’s pub-sub mechanism} to manage \textit{Websocket connections} and enable message broadcasting}
-      \resumeItemListEnd
-
+    
   \resumeSubHeadingListEnd
 
 
