feat: add sde-1 point

--- a/resume.tex
+++ b/resume.tex
@@ -137,6 +137,8 @@
       {Vegapay}{Bengaluru, KA}
       \resumeItemListStart
         \resumeItem{Designed and developed \textbf{Athena}, a multimodal \textbf{\textit{AI assistant}} with \textbf{real-time voice/text interaction}, leveraging \textbf{\textit{LangGraph}} agents, \textbf{\textit{RAG}} (\textbf{\textit{vector}} + \textbf{\textit{graph DB}}), \textbf{\textit{Whisper}}, and \textbf{\textit{Kokoro-TTS}} to enable intelligent onboarding and contextual guidance.}
+        \resumeItem{Optimized PostgreSQL to ClickHouse data sync pipeline (Temporal + Kubernetes) by implementing batched \textit{COPY}-based ingestion, \textbf{reducing latency from 2.5 s to 0.6 s} per 10 k-row batch and \textbf{improving overall ETL throughput by 4x}.}
+        
       \resumeItemListEnd
     
 
@@ -144,7 +146,6 @@
       {SDE Intern}{Jan 2025 -- June 2025}
       {Vegapay}{Bengaluru, KA}
       \resumeItemListStart
-        \resumeItem{Engineered a warm-up mechanism post-deployment which \textbf{reduced} first-hit \textbf{API latency by 76\%}, accelerating processing of high-volume financial transactions and improving overall system responsiveness for users}
         \resumeItem{Built WaveCtrl, \textbf{a full-stack automation tool} using \textbf{\textit{Streamlit}}, \textbf{\textit{FastAPI}}, and \textbf{\textit{Celery}}, enabling teams to configure and trigger data ingestion pipelines through a self-serve dashboard; \textbf{reduced manual onboarding time by automating backend workflows} and job scheduling via \textbf{\textit{RESTful APIs}} and async task queues.}
         \resumeItem{Migrated financial reporting queries from \textit\textbf{{Amazon Athena}} to \textbf{ClickHouse}, \textit{\textbf{reducing query execution time by 70\%}} and \textit{\textbf{cutting operational costs by 50\%}}, enhancing fraud detection and transaction analytics.}
       \resumeItemListEnd
